# jps-pre-commit-utils

./: .coveragerc  .flake8  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  test.yml
docs/: CHANGELOG.md  Development_SOP.md  Release_SOP.md
scripts/: update_changelog.py
src/jps_pre_commit_utils/: check_inserted_lines.py  cli.py  config.py  git_diff.py  help.py  report.py  rules.py  scanner.py
tests/: test_check_inserted_lines.py  test_check_inserted_lines_entrypoint.py  test_cli.py  test_config.py  test_config_precedence.py  test_git_diff.py  test_report.py  test_rules.py  test_scanner.py
